--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     },
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.0"
+        "codeigniter4/framework": "^4.0",
+        "components/jquery": "^3.7",
+        "datatables.net/datatables.net-bs5": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
